# mygeopy

.github/workflows/: python-app.yml  python-package.yml
mygeopy/: .gitignore  pyproject.toml  triangle.py
mygeopy/mygeopy.egg-info/: PKG-INFO  SOURCES.txt
mygeopy/tests/: test_triangle.py
